# prueba-tecnica-proteccion

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
app/: main.py
docs/: contributing.md  developer_guide.md  install.md  project_structure.md  user_guide.md
notebooks/: 01-AGE90-home_data.ipynb  02-AGE90-sentiment_analysis.ipynb
scripts/: data_download.sh  setup_env.sh
src/proteccion/: __main__.py  credentials.py
src/proteccion/data/: data_loader.py
src/proteccion/features/: feature_engineering.py
src/proteccion/models/: model_utils.py
src/proteccion/utils/: paths.py
src/proteccion/visualization/: visualize.py
