[tool.poetry]
name = "proteccion"
version = "0.1.0"
description = "A short description of the project."
authors = ["AGE90 <alejandrogomezechavarria@gmail.com>"]
license = "No license file"
readme = "README.md"
homepage = "https://example.com"
repository = "https://example.com"
documentation = "https://example.com/docs"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: No license file",
    "Operating System :: OS Independent",
]
packages = [{ include = "proteccion", from = "src" }]

[tool.poetry.dependencies]
python = "3.11"
requests = "^2.32.5"
pydantic = "^2.11.9"
pyprojroot = "^0.3.0"
python-dotenv = "^1.1.1"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
mypy = "^1.18.2"
pre-commit = "^4.3.0"
ruff = "^0.13.1"


[tool.poetry.group.notebook.dependencies]
ipykernel = "^6.30.1"


[tool.poetry.group.data-science.dependencies]
openpyxl = "^3.1.5"
scipy = "^1.16.2"
statsmodels = "^0.14.5"
scikit-learn = "^1.7.2"
joblib = "^1.5.2"
mlflow = "^3.4.0"
kaggle = "^1.7.4.5"


[tool.poetry.group.viz.dependencies]
seaborn = "^0.13.2"
missingno = "^0.5.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
pytest-mock = "^3.15.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
my-cli = "proteccion.__main__:main"

# Configure pytest
[tool.pytest.ini_options]
addopts = "--cov=src"
testpaths = ["tests"]

# Configure mypy
[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

# Configure black
[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

# Configure ruff
[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.isort]
known-first-party = ["proteccion"]
